--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "Z:\\.virtualenvs\\DjangoTutorial-Cnakfw6Q\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\HP\\.virtualenvs\\djangoApp2-1-i-KW1KWT\\Scripts\\python.exe"
 }
